--- a/wifi/WCNSS_qcom_cfg.ini
+++ b/wifi/WCNSS_qcom_cfg.ini
@@ -470,6 +470,10 @@ gEnableNanSupport=1
 # bit-5 : drop DTP/LLC/CDP
 g_enable_packet_filter_bitmap=3
 
+# Enable pkt log
+# 1 - enable, 0 - disable
+gEnablePacketLog=1
+
 # Disable RX wakelock feature
 rx_wakelock_timeout=0
 
