--- a/gps/etc/gps.conf
+++ b/gps/etc/gps.conf
@@ -1,9 +1,20 @@
+#Uncommenting these urls would only enable
+#the power up auto injection and force injection(test case).
+#XTRA_SERVER_1=http://xtrapath1.izatcloud.net/xtra2.bin
+#XTRA_SERVER_2=http://xtrapath2.izatcloud.net/xtra2.bin
+#XTRA_SERVER_3=http://xtrapath3.izatcloud.net/xtra2.bin
+
 #Version check for XTRA
 #DISABLE = 0
 #AUTO    = 1
 #XTRA2   = 2
 #XTRA3   = 3
 XTRA_VERSION_CHECK=0
+
+XTRA_TEST_ENABLED = 1
+XTRA_THROTTLE_ENABLED = 0
+
+
 
 # Error Estimate
 # _SET = 1
@@ -14,57 +25,61 @@ ERR_ESTIMATE=0
 NTP_SERVER=time.izatcloud.net
 
 #XTRA CA path
-XTRA_CA_PATH=/usr/lib/ssl-1.1/certs
+XTRA_CA_PATH=/system/etc/security/cacerts
 
 # DEBUG LEVELS: 0 - none, 1 - Error, 2 - Warning, 3 - Info
 #               4 - Debug, 5 - Verbose
 # If DEBUG_LEVEL is commented, Android's logging levels will be used
-DEBUG_LEVEL = 3
+DEBUG_LEVEL = 5
 
 # Intermediate position report, 1=enable, 0=disable
 INTERMEDIATE_POS=0
 
+# Below bit mask configures how GPS functionalities
+# should be locked when user turns off GPS on Settings
+# Set bit 0x1 if MO GPS functionalities are to be locked
+# Set bit 0x2 if NI GPS functionalities are to be locked
+# default - non is locked for backward compatibility
+GPS_LOCK = 0
+
 # supl version 1.0
-SUPL_VER=0x10000
+SUPL_VER=0x20000
 
 # Emergency SUPL, 1=enable, 0=disable
-#SUPL_ES=1
+SUPL_ES=0
 
 #Choose PDN for Emergency SUPL
 #1 - Use emergency PDN
 #0 - Use regular SUPL PDN for Emergency SUPL
-#USE_EMERGENCY_PDN_FOR_EMERGENCY_SUPL=0
+USE_EMERGENCY_PDN_FOR_EMERGENCY_SUPL=1
 
 #SUPL_MODE is a bit mask set in config.xml per carrier by default.
 #If it is uncommented here, this value will overwrite the value from
 #config.xml.
 #MSA=0X2
 #MSB=0X1
-#SUPL_MODE=
+SUPL_MODE=3
 
 # GPS Capabilities bit mask
 # SCHEDULING = 0x01
 # MSB = 0x02
 # MSA = 0x04
 # ON_DEMAND_TIME = 0x10
-# default = ON_DEMAND_TIME | MSA | MSB | SCHEDULING
-CAPABILITIES=0x17
+# GEOFENCE = 0x20
+# default = ON_DEMAND_TIME | MSA | MSB | SCHEDULING | GEOFENCE
+CAPABILITIES=0x13
 
 # Accuracy threshold for intermediate positions
 # less accurate positions are ignored, 0 for passing all positions
-# ACCURACY_THRES=5000
+ACCURACY_THRES=70
 
 ################################
 ##### AGPS server settings #####
 ################################
 
 # FOR SUPL SUPPORT, set the following
-# SUPL_HOST=supl.host.com or IP
-# SUPL_PORT=1234
-
-# FOR MO SUPL SUPPORT, set the following
-# MO_SUPL_HOST=supl.host.com or IP
-# MO_SUPL_PORT=1234
+SUPL_HOST=supl.google.com
+SUPL_PORT=7275
 
 # FOR C2K PDE SUPPORT, set the following
 # C2K_HOST=c2k.pde.com or IP
@@ -87,43 +102,11 @@ CAPABILITIES=0x17
 # 3: Enable both LPP_User_Plane and LPP_Control_Plane
 LPP_PROFILE = 2
 
-####################################
-#Datum Type
-####################################
-# 0: WGS-84
-# 1: PZ-90
-DATUM_TYPE = 0
-
 ################################
 # EXTRA SETTINGS
 ################################
 # NMEA provider (1=Modem Processor, 0=Application Processor)
 NMEA_PROVIDER=0
-
-# Customized NMEA GGA fix quality that can be used to tell
-# whether SENSOR contributed to the fix.
-#
-# When this configuration item is not enabled (set to any value that is not 1),
-# GGA fix quality conforms to NMEA standard spec as below:
-# PPP/DGNSS/SBAS correction fix w/ or w/o sensor: 2
-# RTK fixed fix w/ or w/o sensor: 4
-# RTK float fix w/ or w/o sensor: 5
-# SPE fix w/ or w/o sensor: 1
-# Sensor dead reckoning fix: 6
-#
-# When this configuration is enabled (set to 1), GGA fix quality
-# will be output as below:
-# PPP fix w/o sensor: 59,                  w/ sensor: 69
-# DGNSS/SBAS correction fix w/o sensor: 2, w/ sensor: 62
-# RTK fixed fix w/o sensor: 4,             w/ sensor: 64
-# RTK float fix w/o sensor: 5,             w/ sensor: 65,
-# SPE fix w/o sensor: 1,               and w/ sensor: 61
-# Sensor dead reckoning fix: 6
-#
-# any value that is not 1 - disabled
-# 1 - enabled
-CUSTOM_NMEA_GGA_FIX_QUALITY_ENABLED = 0
-
 # Mark if it is a SGLTE target (1=SGLTE, 0=nonSGLTE)
 SGLTE_TARGET=0
 
@@ -133,7 +116,7 @@ SGLTE_TARGET=0
 # 0x1: RRC CPlane
 # 0x2: RRLP UPlane
 # 0x4: LLP Uplane
-A_GLONASS_POS_PROTOCOL_SELECT = 0
+A_GLONASS_POS_PROTOCOL_SELECT = 0x2
 
 ##################################################
 # Select technology for LPPe Control Plane
@@ -160,8 +143,6 @@ A_GLONASS_POS_PROTOCOL_SELECT = 0
 #     SUPL_VER
 #     SUPL_HOST
 #     SUPL_PORT
-#     MO_SUPL_HOST
-#     MO_SUPL_PORT
 #     C2K_HOST
 #     C2K_PORT
 #     LPP_PROFILE
@@ -208,16 +189,6 @@ DR_SYNC_ENABLED = 0
 # PPS Device name
 #####################################
 PPS_DEVICENAME = /dev/pps0
-
-#####################################
-# Ignore PPS at Startup and after long outage
-#####################################
-IGNORE_PPS_PULSE_COUNT = 1
-
-#####################################
-# Long GNSS RF outage in seconds
-#####################################
-GNSS_OUTAGE_DURATION = 10
 
 #####################################
 # AP Clock Accuracy
@@ -318,29 +289,7 @@ CP_MTLR_ES=0
 ##################################################
 # 0 : Enable QTI GNSS (default)
 # 1 : Enable QCSR SS5
-# 2 : Enable PDS API
-# This setting use to select between QTI GNSS,
-# QCSR SS5 hardware receiver, and PDS API.
+# This setting use to select between QTI GNSS
+# and QCSR SS5 hardware receiver.
 # By default QTI GNSS receiver is enabled.
 # GNSS_DEPLOYMENT = 0
-
-##################################################
-## LOG BUFFER CONFIGURATION
-##################################################
-#LOG_BUFFER_ENABLED, 1=enable, 0=disable
-#*_LEVEL_TIME_DEPTH, maximum time depth of level *
-#in log buffer, unit is second
-#*_LEVEL_MAX_CAPACITY, maximum numbers of level *
-#log print sentences in log buffer
-LOG_BUFFER_ENABLED = 0
-E_LEVEL_TIME_DEPTH = 600
-E_LEVEL_MAX_CAPACITY = 50
-W_LEVEL_TIME_DEPTH = 500
-W_LEVEL_MAX_CAPACITY = 100
-I_LEVEL_TIME_DEPTH = 400
-I_LEVEL_MAX_CAPACITY = 200
-D_LEVEL_TIME_DEPTH = 30
-D_LEVEL_MAX_CAPACITY = 300
-V_LEVEL_TIME_DEPTH = 200
-V_LEVEL_MAX_CAPACITY = 400
-
