--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -128,6 +128,7 @@ on fs
 
 on post-fs
     start vendor.qseecomd
+    wait_for_prop vendor.sys.listeners.registered true
     write /dev/ipa 1
 
     # We chown/chmod /cust again so because mount is run as root + defaults
@@ -147,19 +148,19 @@ on post-fs-data
     mkdir /data/tombstones/lpass 0771 system system
     mkdir /data/tombstones/wcnss 0771 system system
     mkdir /data/tombstones/dsps 0771 system system
-
-    mkdir /data/misc/seemp 0700 system system
+    mkdir /data/vendor/hbtp 0750 system system
     mkdir /data/vendor/tloc 0700 system drmrpc
-
     mkdir /data/vendor/thermal 0771 root system
     mkdir /data/vendor/thermal/config 0771 root system
 
 on boot
+    start rmt_storage
+    start rfs_access
     write /dev/cpuset/top-app/cpus 0-7
     write /dev/cpuset/foreground/cpus 0-7
+    write /dev/cpuset/foreground/boost/cpus 0-7
     write /dev/cpuset/background/cpus 0-7
     write /dev/cpuset/system-background/cpus 0-7
-    write /dev/cpuset/restricted/cpus 0-7
     ####Regionalization config and prop files####
     chmod 0644 /persist/speccfg/spec
     chmod 0644 /persist/speccfg/devicetype
@@ -196,16 +197,27 @@ on boot
     chown system system /sys/class/graphics/fb0/msm_fb_cabc_movie
     chown system system /sys/class/graphics/fb0/msm_fb_cabc_still
     chown system system /sys/class/graphics/fb0/msm_fb_hbm
-
     chown wifi wifi /sys/module/wlan/parameters/fwpath
+    
+#Load WLAN driver
+   insmod /vendor/lib/modules/qca_cld3_wlan.ko
 
 #USB controller configuration
     setprop vendor.usb.rndis.func.name "rndis_bam"
     setprop vendor.usb.rmnet.func.name "rmnet_bam"
     setprop vendor.usb.rmnet.inst.name "rmnet"
     setprop vendor.usb.dpl.inst.name "dpl"
-    write /sys/module/usb_f_qcrndis/parameters/rndis_dl_max_xfer_size 15916
+    setprop vendor.usb.qdss.inst.name "qdss"
+    setprop vendor.usb.controller a800000.dwc3
     setprop sys.usb.configfs 1
+    write /sys/module/usb_f_qcrndis/parameters/rndis_dl_max_xfer_size 15916
+
+on boot && property:persist.vendor.usb.controller.default=*
+    setprop vendor.usb.controller ${persist.vendor.usb.controller.default}
+
+on property:vendor.usb.controller=*
+    setprop sys.usb.controller ${vendor.usb.controller}
+    write /sys/module/usb_f_qcrndis/parameters/rndis_dl_max_xfer_size 15916
 
 #Peripheral manager
 service vendor.per_mgr /system/vendor/bin/pm-service
@@ -225,7 +237,6 @@ on property:init.svc.vendor.per_mgr=running
 
 on property:sys.shutdown.requested=*
     stop vendor.per_proxy
-    stop vendor.ims_rtp_daemon
 
 on property:vendor.camera.thermal_lc=12
     write /sys/class/thermal/thermal_message/sconfig 12
@@ -256,7 +267,23 @@ service adsprpcd /vendor/bin/adsprpcd audiopd
     class main
     user media
     group media
-    writepid /dev/cpuset/system-background/tasks
+
+service hbtp /system/vendor/bin/hbtp_daemon
+    class main
+    user system
+    group system
+    disabled
+
+service audiod /system/vendor/bin/audiod
+   class late_start
+   user system
+   group system
+
+service vendor.cdsprpcd /vendor/bin/cdsprpcd
+   class main
+   user system
+   group system
+   disabled
 
 service vendor.pd_mapper /system/vendor/bin/pd-mapper
     class core
@@ -300,8 +327,10 @@ on property:vendor.post_boot.parsed=1
     setprop vendor.powerhal.init 1
 
 on charger
+    load_system_props
     start qcom-post-boot
     start vendor.hvdcp_opti
+    setprop vendor.usb.controller a800000.dwc3
     setprop sys.usb.configfs 1
     start thermal-engine
     start vendor.power_off_alarm
