sensors: adding permission to create registry files for sdm660_64
Change-Id: I833cf679d1c6720aeac01ea0c8474f2a450988d0

--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -158,6 +158,12 @@ on post-fs-data
     mkdir /data/vendor/thermal 0771 root system
     mkdir /data/vendor/thermal/config 0771 root system
 
+on early-boot
+    chown system system /mnt/vendor/persist/sensors
+    chown system system /mnt/vendor/persist/sensors/sns.reg
+    chown system system /mnt/vendor/persist/sensors/sensors_settings
+    chmod 0664 /mnt/vendor/persist/sensors/sensors_settings
+
 on boot
     start rmt_storage
     start rfs_access
